tests/files/lexer_tests/should_fail/048.cmdr
// Illegal character in variable name (ascii 15)
myvar = 15;